updated other state
